--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                     <input type="button" name="encendido" id="encendido" value= "encender" onclick="command(encendido.value)">
                     <input type="button" name="apagado" id="apagado" value= "apagar" onclick="command(apagado.value)">
                     <input type="button" name="patron_I" id="patron_I" value= "patron_I" onclick="command(patron_I.value)"> 
+                    <input type="button" name="patron_II" id="patron_II" value= "patron_II" onclick="command(patron_I.value)"> 
+                    <input type="button" name="patron_III" id="patron_III" value= "patron_III" onclick="command(patron_I.value)"> 
                     <input type="button" name="parpadeo" id="parpadeo" value= "parpadeo" onclick="command(parpadeo.value)"> 
                     <input type="button" name="caracolInverso" id="caracolInverso" value= "caracolInverso" onclick="command(caracolInverso.value)"> 
                     <input type="button" name="ilera" id="ilera" value= "ilera" onclick="command(ilera.value)"> 
